# snake2d-sdl2

./: .gitmodules  CMakeLists.txt
assets/sounds/: README.txt
headers/core/: Engine.h  SoundManager.h  TextManager.h  Texture.h
headers/entities/: AppleEntity.h  Entity.h  EntityFactory.h  Score.h  SnakeEntity.h
headers/states/: GameOverState.h  GameState.h  GameplayState.h  MenuState.h  StateFactory.h
src/: main.cpp
src/core/: Engine.cpp  Score.cpp  SoundManager.cpp  TextManager.cpp  Texture.cpp
src/entities/: AppleEntity.cpp  EntityFactory.cpp  SnakeEntity.cpp
src/states/: GameOverState.cpp  GameState.cpp  GameplayState.cpp  MenuState.cpp  StateFactory.cpp
